include/sweeteditor/c_api.h

/// Fold region containing specified line
/// @param line Line number(0-based)
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_fold_at(intptr_t editor_handle, size_t line, size_t* out_size);
/// Unfold region containing specified line
/// @param line Line number(0-based)
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_unfold_at(intptr_t editor_handle, size_t line, size_t* out_size);
/// Fold all regions
EDITOR_API const uint8_t* editor_fold_all(intptr_t editor_handle, size_t* out_size);
/// Unfold all regions
EDITOR_API const uint8_t* editor_unfold_all(intptr_t editor_handle, size_t* out_size);
/// Check whether specified line is visible (not hidden by folding)
/// @param line Line number(0-based)
/// @return 1=visible, 0=hidden
EDITOR_API int editor_is_line_visible(intptr_t editor_handle, size_t line);
/// Get visible logical line range from the most recent completed layout pass
/// @param out_start_line Output first visible logical line (inclusive)
/// @param out_end_line Output last visible logical line (inclusive), or -1 when empty
EDITOR_API void editor_get_visible_line_range(intptr_t editor_handle, int32_t* out_start_line, int32_t* out_end_line);
/// Clear all highlight spans
EDITOR_API const uint8_t* editor_clear_highlights(intptr_t editor_handle, size_t* out_size);
/// Clear all inlay hints
EDITOR_API const uint8_t* editor_clear_inlay_hints(intptr_t editor_handle, size_t* out_size);
/// Clear all phantom texts
EDITOR_API const uint8_t* editor_clear_phantom_texts(intptr_t editor_handle, size_t* out_size);
/// Clear all decoration data
EDITOR_API const uint8_t* editor_clear_all_decorations(intptr_t editor_handle, size_t* out_size);
/// Insert VSCode snippet template and enter linked editing mode (convenience API)
/// @param snippet_template VSCode snippet template (UTF8)
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_insert_snippet(intptr_t editor_handle, const char* snippet_template, size_t* out_size);
/// Start linked editing mode with generic LinkedEditingModel (compact binary)
/// @param data payload(LE):
///             u32 group_count, u32 range_count, u32 string_blob_size
///             group_count groups: [u32 index, u32 default_text_offset, u32 default_text_len]
///             range_count groups: [u32 group_ordinal, u32 start_line, u32 start_col, u32 end_line, u32 end_col]
///             UTF-8 string blob(default_text_offset=0xFFFFFFFF means null)
/// @param size payload byte length
EDITOR_API const uint8_t* editor_start_linked_editing(intptr_t editor_handle, const uint8_t* data, size_t size, size_t* out_size);
/// Whether linked editing mode is active
/// @return 1=yes, 0=no
EDITOR_API int editor_is_in_linked_editing(intptr_t editor_handle);
/// Linked editing: jump to next tab stop
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_linked_editing_next(intptr_t editor_handle, size_t* out_size);
/// Linked editing: jump to previous tab stop
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_linked_editing_prev(intptr_t editor_handle, size_t* out_size);
/// Cancel linked editing mode
EDITOR_API const uint8_t* editor_cancel_linked_editing(intptr_t editor_handle, size_t* out_size);
/// Free string memory allocated on C++ side
/// @param string_ptr String pointer
EDITOR_API void free_u16_string(intptr_t string_ptr);
/// Free UTF-8 string memory allocated on C++ side
/// @param string_ptr String pointer
EDITOR_API void free_u8_string(intptr_t string_ptr);
/// Free binary memory returned by C++ side
/// Applies to all APIs that return const uint8_t* + out_size.
/// Platform must call once after reading payload; NULL/0 can be safely ignored.
/// @param data_ptr Start address of binary payload
EDITOR_API void free_binary_data(intptr_t data_ptr);
/// Get whether composition is currently active
/// @return 1=composing, 0=not composing
EDITOR_API int editor_is_composing(intptr_t editor_handle);
/// Get current composition range, or -1 values when composition is inactive
EDITOR_API void editor_get_composing_range(intptr_t editor_handle,
                                           int32_t* out_start_line,
                                           int32_t* out_start_column,
                                           int32_t* out_end_line,
                                           int32_t* out_end_column);
/// Get current active composition session range
EDITOR_API void editor_get_composing_session_range(intptr_t editor_handle,
                                                   int32_t* out_start_line,
                                                   int32_t* out_start_column,
                                                   int32_t* out_end_line,
                                                   int32_t* out_end_column);
/// Update platform IME preedit text.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
EDITOR_API const uint8_t* editor_ime_update_preedit(intptr_t editor_handle,
                                                    const char* text,
                                                    int script_hint,
                                                    size_t* out_size);
EDITOR_API const uint8_t* editor_ime_set_composing_text(intptr_t editor_handle,
                                                        const char* text,
                                                        int cursor_offset,
                                                        int script_hint,
                                                        size_t* out_size);
EDITOR_API const uint8_t* editor_ime_set_composing_text_selection(intptr_t editor_handle,
                                                                  const char* text,
                                                                  size_t selection_start_offset,
                                                                  size_t selection_end_offset,
                                                                  int script_hint,
                                                                  size_t* out_size);
/// Commit platform IME text.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
EDITOR_API const uint8_t* editor_ime_commit_text(intptr_t editor_handle,
                                                 const char* text,
                                                 int script_hint,
                                                 size_t* out_size);
EDITOR_API const uint8_t* editor_ime_commit_text_with_cursor(intptr_t editor_handle,
                                                             const char* text,
                                                             int cursor_offset,
                                                             int script_hint,
                                                             size_t* out_size);
/// Finish the current platform IME preedit.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
EDITOR_API const uint8_t* editor_ime_finish_preedit(intptr_t editor_handle, size_t* out_size);
/// Cancel the current platform IME preedit.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
EDITOR_API const uint8_t* editor_ime_cancel_preedit(intptr_t editor_handle, size_t* out_size);
/// Mark a document range that the platform IME explicitly reports as composing.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
EDITOR_API const uint8_t* editor_ime_mark_document_range(intptr_t editor_handle,
                                                          size_t start_line,
                                                          size_t start_column,
                                                          size_t end_line,
                                                          size_t end_column,
                                                          int script_hint,
                                                          size_t* out_size);
EDITOR_API const uint8_t* editor_ime_mark_document_range_by_offset(intptr_t editor_handle,
                                                                   size_t start_offset,
                                                                   size_t end_offset,
                                                                   int script_hint,
                                                                   size_t* out_size);
/// Report platform candidate replacement text.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
EDITOR_API const uint8_t* editor_ime_replace_text(intptr_t editor_handle,
                                                  size_t start_line,
                                                  size_t start_column,
                                                  size_t end_line,
                                                  size_t end_column,
                                                  const char* text,
                                                  int script_hint,
                                                  size_t* out_size);