platform/Flutter/sweeteditor/lib/sweeteditor_bindings_generated.dart


/// Fold region containing specified line
/// @param line Line number(0-based)
/// @return EditorActionResult binary payload, returns NULL on failure
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Size, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_fold_at(
  int editor_handle,
  int line,
  ffi.Pointer<ffi.Size> out_size,
);

/// Unfold region containing specified line
/// @param line Line number(0-based)
/// @return EditorActionResult binary payload, returns NULL on failure
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Size, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_unfold_at(
  int editor_handle,
  int line,
  ffi.Pointer<ffi.Size> out_size,
);

/// Fold all regions
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_fold_all(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Unfold all regions
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_unfold_all(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Check whether specified line is visible (not hidden by folding)
/// @param line Line number(0-based)
/// @return 1=visible, 0=hidden
@ffi.Native<ffi.Int Function(ffi.IntPtr, ffi.Size)>(
  assetId: _sweeteditorAssetId,
)
external int editor_is_line_visible(int editor_handle, int line);

/// Get visible logical line range from the most recent completed layout pass
/// @param out_start_line Output first visible logical line (inclusive)
/// @param out_end_line Output last visible logical line (inclusive), or -1 when empty
@ffi.Native<
  ffi.Void Function(ffi.IntPtr, ffi.Pointer<ffi.Int32>, ffi.Pointer<ffi.Int32>)
>(assetId: _sweeteditorAssetId)
external void editor_get_visible_line_range(
  int editor_handle,
  ffi.Pointer<ffi.Int32> out_start_line,
  ffi.Pointer<ffi.Int32> out_end_line,
);

/// Clear all highlight spans
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_clear_highlights(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Clear all inlay hints
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_clear_inlay_hints(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Clear all phantom texts
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_clear_phantom_texts(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Clear all decoration data
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_clear_all_decorations(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Insert VSCode snippet template and enter linked editing mode (convenience API)
/// @param snippet_template VSCode snippet template (UTF8)
/// @return EditorActionResult binary payload, returns NULL on failure
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_insert_snippet(
  int editor_handle,
  ffi.Pointer<ffi.Char> snippet_template,
  ffi.Pointer<ffi.Size> out_size,
);

/// Start linked editing mode with generic LinkedEditingModel (compact binary)
/// @param data payload(LE):
/// u32 group_count, u32 range_count, u32 string_blob_size
/// group_count groups: [u32 index, u32 default_text_offset, u32 default_text_len]
/// range_count groups: [u32 group_ordinal, u32 start_line, u32 start_col, u32 end_line, u32 end_col]
/// UTF-8 string blob(default_text_offset=0xFFFFFFFF means null)
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_start_linked_editing(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Whether linked editing mode is active
/// @return 1=yes, 0=no
@ffi.Native<ffi.Int Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external int editor_is_in_linked_editing(int editor_handle);

/// Linked editing: jump to next tab stop
/// @return EditorActionResult binary payload, returns NULL on failure
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_linked_editing_next(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Linked editing: jump to previous tab stop
/// @return EditorActionResult binary payload, returns NULL on failure
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_linked_editing_prev(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Cancel linked editing mode
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_cancel_linked_editing(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Free string memory allocated on C++ side
/// @param string_ptr String pointer
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void free_u16_string(int string_ptr);

/// Free UTF-8 string memory allocated on C++ side
/// @param string_ptr String pointer
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void free_u8_string(int string_ptr);

/// Free binary memory returned by C++ side
/// Applies to all APIs that return const uint8_t* + out_size.
/// Platform must call once after reading payload; NULL/0 can be safely ignored.
/// @param data_ptr Start address of binary payload
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void free_binary_data(int data_ptr);

/// Get whether composition is currently active
/// @return 1=composing, 0=not composing
@ffi.Native<ffi.Int Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external int editor_is_composing(int editor_handle);

/// Get current composition range, or -1 values when composition is inactive
@ffi.Native<
  ffi.Void Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
  )
>(assetId: _sweeteditorAssetId)
external void editor_get_composing_range(
  int editor_handle,
  ffi.Pointer<ffi.Int32> out_start_line,
  ffi.Pointer<ffi.Int32> out_start_column,
  ffi.Pointer<ffi.Int32> out_end_line,
  ffi.Pointer<ffi.Int32> out_end_column,
);

/// Get current active composition session range
@ffi.Native<
  ffi.Void Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
  )
>(assetId: _sweeteditorAssetId)
external void editor_get_composing_session_range(
  int editor_handle,
  ffi.Pointer<ffi.Int32> out_start_line,
  ffi.Pointer<ffi.Int32> out_start_column,
  ffi.Pointer<ffi.Int32> out_end_line,
  ffi.Pointer<ffi.Int32> out_end_column,
);

/// Update platform IME preedit text.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_update_preedit(
  int editor_handle,
  ffi.Pointer<ffi.Char> text,
  int script_hint,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_set_composing_text(
  int editor_handle,
  ffi.Pointer<ffi.Char> text,
  int cursor_offset,
  int script_hint,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
    ffi.Size,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_set_composing_text_selection(
  int editor_handle,
  ffi.Pointer<ffi.Char> text,
  int selection_start_offset,
  int selection_end_offset,
  int script_hint,
  ffi.Pointer<ffi.Size> out_size,
);

/// Commit platform IME text.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_commit_text(
  int editor_handle,
  ffi.Pointer<ffi.Char> text,
  int script_hint,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_commit_text_with_cursor(
  int editor_handle,
  ffi.Pointer<ffi.Char> text,
  int cursor_offset,
  int script_hint,
  ffi.Pointer<ffi.Size> out_size,
);

/// Finish the current platform IME preedit.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_ime_finish_preedit(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Cancel the current platform IME preedit.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_ime_cancel_preedit(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Mark a document range that the platform IME explicitly reports as composing.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Size,
    ffi.Size,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_mark_document_range(
  int editor_handle,
  int start_line,
  int start_column,
  int end_line,
  int end_column,
  int script_hint,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_mark_document_range_by_offset(
  int editor_handle,
  int start_offset,
  int end_offset,
  int script_hint,
  ffi.Pointer<ffi.Size> out_size,
);

/// Report platform candidate replacement text.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Size,
    ffi.Size,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_replace_text(
  int editor_handle,
  int start_line,
  int start_column,
  int end_line,
  int end_column,
  ffi.Pointer<ffi.Char> text,
  int script_hint,
  ffi.Pointer<ffi.Size> out_size,
);
